Fixed insert functionality, everything is working with multiple primary keys. Have not implemented functionality if a table has no primary key (roysched)

--- a/frontend/src/app/table/table.component.html
+++ b/frontend/src/app/table/table.component.html
@@ -10,7 +10,7 @@
                     }
                 </select>
             </div>
-            <button id="insertBtn" mat-raised-button routerLink="insert">Insert</button>
+            <button id="insertBtn" mat-raised-button [routerLink]="tblservice.tableName + '/insert'">Insert</button>
         </div>
             <table>
                 <thead>
