Added capability of generating random placeholders based on pattern.

--- a/frontend/src/app/record/record.component.html
+++ b/frontend/src/app/record/record.component.html
@@ -33,6 +33,7 @@
                                 [maxlength]="validators.getColMaxLength(col)"
                                 [required]="validators.isRequired(col)"
                                 [pattern]="validators.getPattern(col)"
+                                [placeholder]="placeholders[col]"
                                 >
                             }
                         </td>
