Stopped identity columns from showing when on details page or inserting. Need to stop sending identity columns when updating.

--- a/frontend/src/app/record/record.component.html
+++ b/frontend/src/app/record/record.component.html
@@ -15,28 +15,32 @@
 		<table>
 			<thead>
                 @for (header of tableHeaders; track $index) {
-                    <th>
-                        {{header}} <span class="error-msg">{{validators.isRequired(header) ? '*' : ''}}</span>
-                    </th>
+                    @if (!identities[header]) {
+                        <th>
+                            {{header}} <span class="error-msg">{{validators.isRequired(header) ? '*' : ''}}</span>
+                        </th>
+                    }
                 }
 			</thead>
 			<tbody>
 				<tr>
                     @for (col of tableHeaders; track $index) {
-                        <td class="field-container">
-                            @if (validators.getColumnSchema(col)?.DATA_TYPE === 'bit') {
-                                <input type="checkbox" [(ngModel)]="record[col]" name={{col}}>
-                            }
-                            @else {
-                                <input type='text' [(ngModel)]="record[col]" name={{col}}
-                                [minlength]="validators.getColMinLength(col)"
-                                [maxlength]="validators.getColMaxLength(col)"
-                                [required]="validators.isRequired(col)"
-                                [pattern]="validators.getPattern(col)"
-                                [placeholder]="placeholders[col]"
-                                >
-                            }
-                        </td>
+                        @if (!identities[col]) {
+                            <td class="field-container">
+                                @if (validators.getColumnSchema(col)?.DATA_TYPE === 'bit') {
+                                    <input type="checkbox" [(ngModel)]="record[col]" name={{col}}>
+                                }
+                                @else {
+                                    <input type='text' [(ngModel)]="record[col]" name={{col}}
+                                    [minlength]="validators.getColMinLength(col)"
+                                    [maxlength]="validators.getColMaxLength(col)"
+                                    [required]="validators.isRequired(col)"
+                                    [pattern]="validators.getPattern(col)"
+                                    [placeholder]="placeholders[col]"
+                                    >
+                                }
+                            </td>
+                        }
                     }
 				</tr>
 			</tbody>
