--- a/frontend/src/app/table/table.component.scss
+++ b/frontend/src/app/table/table.component.scss
@@ -1,10 +1,12 @@
-#tableContainerHeader {
+#headerContainer {
     display:flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    gap:50px;
+    overflow: auto;
 }
 
-#tableSelect {
+.headerInputs {
     margin-left:10px;
 }
 
