--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -31,7 +31,7 @@ table {
 
 th {
 	border: 1px, solid, black;
-    background-color: lightskyblue;
+    background-color: lightskyblue !important;
 }
 
 tr {
@@ -39,7 +39,7 @@ tr {
 }
 
 td {
-	border: 1px, solid, black;
+	border: 1px, solid, black !important;
 	padding: 3px 10px 3px 10px;
 }
 
