--- a/frontend/src/app/table/table.component.html
+++ b/frontend/src/app/table/table.component.html
@@ -16,12 +16,12 @@
         <button id="insertBtn" mat-raised-button [routerLink]="tblservice.tableName + '/insert'">Insert</button>
     </div>
     <div class="tableContainer">
-            <table mat-table [dataSource]="filteredRows">
+            <table mat-table [dataSource]="filteredRows" matSort>
                 @for (c of tableHeaders; track $index) {
                     <ng-container matColumnDef={{c}}>
-                        <th mat-header-cell *matHeaderCellDef> {{c}} </th>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{c}} </th>
                         <td mat-cell *matCellDef="let row"
-                        title={{row[c]}}>{{row[c] ? row[c].length > 50 ? row[c].slice(0, 47) + "..." : row[c] : row[c]}}</td>
+                        title={{row[c]}}>{{row[c]}}</td>
                     </ng-container>
                 }
                 <tr mat-header-row *matHeaderRowDef="tableHeaders"></tr>
