--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -22,7 +22,7 @@ a:visited {
     margin-right:auto;
 }
 
-table {
+[mat-table] {
 	overflow: auto;
 	white-space: nowrap;
 	border-collapse: collapse;
@@ -43,12 +43,6 @@ td {
 	padding: 3px 10px 3px 10px;
 }
 
-
-input {
-	font-size: 1em;
-	width:8em;
-	text-align: center;
-}
 
 button[mat-button], button[mat-raised-button] {
     font-size: 1.2em;
