Made paginator sticky when page overflows and is scrolled.

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -26,6 +26,12 @@ a:visited {
 
 [mat-table] {
 	border-collapse: collapse;
+    white-space: nowrap !important;
+}
+
+mat-paginator {
+    position: sticky;
+    left: 0px;
 }
 
 
