--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,3 +1,5 @@
+@use '../node_modules/@angular/material' as mat;
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: floralwhite; }
 
@@ -29,6 +31,15 @@ a:visited {
     white-space: nowrap !important;
 }
 
+
+:root {
+  @include mat.table-overrides((
+    row-item-outline-color: black,
+    row-item-outline-width: 1px,
+    background-color: white,
+  ));
+}
+
 mat-paginator {
     position: sticky;
     left: 0px;
@@ -36,18 +47,9 @@ mat-paginator {
 
 
 th {
-	border: 1px solid black;
     background-color: lightskyblue !important;
 }
 
-tr {
-    background-color: white;
-}
-
-td {
-	border: 1px, solid, black !important;
-	padding: 3px 10px 3px 10px;
-}
 
 
 button[mat-button], button[mat-raised-button] {
