Added error message for any query errors like pkey violations.

--- a/frontend/src/app/record/record.component.html
+++ b/frontend/src/app/record/record.component.html
@@ -1,5 +1,8 @@
 <h1 class="banner">{{title}}</h1>
 <form #recordForm="ngForm" (ngSubmit)="getSubmitInfo()?.submitFunction()">
+    <div class="error-container">
+        <p class="error-msg" [hidden]="!submitError">{{submitError}}</p>
+	</div>
 	<div class="tableContainer">
         <table mat-table [dataSource]="record" fixedLayout="true">
             @for (c of tableHeaders; track $index) {
