--- a/frontend/src/app/record/record.component.scss
+++ b/frontend/src/app/record/record.component.scss
@@ -14,12 +14,12 @@ button[mat-button].del-btn {
 
 td {
     text-align: center;
-    max-width: 150px;
+    max-width: 130px;
     padding: 0px 5px;
 }
 
 input[matInput] {
-    text-align:start;
+    text-align:center;
 }
 
 mat-form-field {
