--- a/frontend/src/app/record/record.component.html
+++ b/frontend/src/app/record/record.component.html
@@ -15,7 +15,7 @@
                             <mat-checkbox aria-labelledby="{{c}}Label" [(ngModel)]="row[c]" name={{c}}></mat-checkbox>
                         }
                         @else {
-                                <mat-form-field subscriptSizing="dynamic">
+                                <mat-form-field appearance="outline" subscriptSizing="dynamic">
                                     <input matInput attr.aria-labelledby="{{c}}Label" type="text" [(ngModel)]="row[c]" name={{c}}
                                     [minlength]="validators.getColMinLength(c)"
                                     [maxlength]="validators.getColMaxLength(c)"
