--- a/frontend/src/app/table/table.component.html
+++ b/frontend/src/app/table/table.component.html
@@ -1,18 +1,18 @@
 <h1 class="banner">Database Editor</h1>
 
     <div id="headerContainer">
-        <div>
-            <label for="tableSelect"><strong>Table:</strong></label>
-            <select id="tableSelect" class="headerInputs" [formControl]="tableNameSelect" (change)="onTableChange()">
+        <mat-form-field>
+            <mat-label>Table:</mat-label>
+            <mat-select id="tableSelect" class="headerInputs" [formControl]="tableNameSelect" (selectionChange)="onTableChange()">
                 @for (table of tables; track $index) {
-                    <option value={{table}}>{{table}}</option>
+                    <mat-option value={{table}}>{{table}}</mat-option>
                 }
-            </select>
-        </div>
-        <div>
-            <label for="filterInput"><strong>Filter:</strong></label>
-            <input id="filterInput" class="headerInputs" type="text" (input)="filterRows($event.target)">
-        </div>
+            </mat-select>
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label>Filter:</mat-label>
+            <input matInput class="headerInputs" type="text" (input)="filterRows($event.target)">
+        </mat-form-field>
         <button id="insertBtn" mat-raised-button [routerLink]="tblservice.tableName + '/insert'">Insert</button>
     </div>
     <div class="tableContainer">
