--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -27,13 +27,7 @@ a:visited {
     width: 90%;
     margin-left: auto;
     margin-right: auto;
-    overflow-x: auto;
-    overflow-y: hidden;
-}
-
-[mat-table] {
-    width: 100%;
-    border-collapse: collapse;
+    overflow: auto;
 }
 
 th {
