--- a/frontend/src/app/record/record.component.scss
+++ b/frontend/src/app/record/record.component.scss
@@ -7,6 +7,12 @@ button[mat-button].del-btn {
 	color: red;
 }
 
+.expandBtn {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
 .tableContainer {
     margin-top: 50px;
 }
@@ -14,12 +20,16 @@ button[mat-button].del-btn {
 
 td {
     text-align: center;
-    max-width: 130px;
     padding: 0px 5px;
 }
 
 input[matInput] {
     text-align:center;
+}
+
+textarea[matInput] {
+    resize: vertical;
+    min-height: 48px;
 }
 
 mat-form-field {
