--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -27,6 +27,9 @@ a:visited {
     width: 90%;
     margin-left: auto;
     margin-right: auto;
+}
+
+.tableContainer {
     overflow: auto;
 }
 
@@ -50,7 +53,9 @@ app-table {
     @include mat.button-overrides((
         protected-container-color: white,
     ));
+    
 }
+
 
 app-record {
     @include mat.form-field-overrides((
