--- a/frontend/src/app/record/record.component.scss
+++ b/frontend/src/app/record/record.component.scss
@@ -20,16 +20,13 @@ button[mat-button].del-btn {
 
 td {
     text-align: center;
+    //max-width: 130px;
     padding: 0px 5px;
-}
-
-input[matInput] {
-    text-align:center;
 }
 
 textarea[matInput] {
     resize: vertical;
-    min-height: 48px;
+    min-height: 1.5rem;
 }
 
 mat-form-field {
