--- a/frontend/src/app/record/record.component.scss
+++ b/frontend/src/app/record/record.component.scss
@@ -20,13 +20,13 @@ button[mat-button].del-btn {
 
 td {
     text-align: center;
-    //max-width: 130px;
+    max-width: 130px;
     padding: 0px 5px;
 }
 
 textarea[matInput] {
-    resize: vertical;
-    min-height: 1.5rem;
+    resize: none;
+    overflow: auto;
 }
 
 mat-form-field {
